# minetest_gui

./: Makefile  README.md  deno.json  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-it.yml  publish.yml
not_source/: main.txt
old_code/: entries.txt  waste_of_time.txt
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
