[package]
name = "minetest_gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = [ "shell-all", "dialog-open",
  "fs-all",
  "path-all",
  "http-all",
  "dialog-message",
  "app-all",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
